--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #2c3e50;
+  background-color: #2c3e50e3;
   color: #ecf0f1;
-  border-bottom: 1px solid #34495e;
+  border-bottom: 1px solid #34495ed5;
   height: 60px;
   font-family: 'Roboto', sans-serif;
 }
