--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,13 +1,15 @@
 .header {
+  background-color: #41566be3;
+  color: #ecf0f1;
+  font-family: 'Roboto', sans-serif;
+  padding: 10px 60px;
+}
+
+.header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #2c3e50e3;
-  color: #ecf0f1;
-  border-bottom: 1px solid #34495ed5;
-  height: 60px;
-  font-family: 'Roboto', sans-serif;
+  margin-bottom: 10px;
 }
 
 .header-left {
@@ -50,10 +52,55 @@
   color: #bdc3c7;
 }
 
+.search-bar {
+  display: flex;
+  align-items: center;
+  background-color: rgba(236, 240, 241, 0.1);
+  border-radius: 5px;
+  padding: 5px 15px;
+  margin-top: 10px;
+  width: 220px;
+  transition: all 0.3s ease;
+  border-bottom: 1px solid #ecf0f3d5;
+  font-size: 0.9em;
+}
+
+.search-bar input {
+  font-family: 'Roboto';
+}
+
+.search-bar:hover {
+  background-color: rgba(236, 240, 241, 0.2);
+}
+
+.search-bar svg {
+  margin-right: 10px;
+  transition: all 0.3s ease;
+}
+
+.search-bar:hover svg {
+  stroke: #ecf0f1;
+}
+
+.search-bar input {
+  background: none;
+  border: none;
+  color: #ecf0f1;
+  font-size: 1em;
+  width: 100%;
+  outline: none;
+}
+
+.search-bar input::placeholder {
+  color: #bdc3c7;
+}
+
 @media (max-width: 768px) {
   .header {
-    padding: 10px;
-    height: auto;
+    padding: 10px 20px;
+  }
+
+  .header-content {
     flex-wrap: wrap;
   }
 
@@ -79,11 +126,16 @@
   .date {
     font-size: 0.8em;
   }
+
+  .search-bar {
+    width: 100%;
+    margin-top: 10px;
+  }
 }
 
 @media (max-width: 400px) {
   .header {
-    padding: 8px;
+    padding: 8px 15px;
   }
 
   .avatar {
@@ -101,5 +153,18 @@
 
   .date {
     font-size: 0.7em;
+  }
+
+  .search-bar {
+    display: flex;
+    align-items: center;
+    background-color: rgba(236, 240, 241, 0.1);
+    border-radius: 5px;
+    padding: 5px 15px;
+    margin-top: 10px;
+    width: 190px;
+    transition: all 0.3s ease;
+    font-size: 0.7em;
+
   }
 }
