--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 .header-left {
@@ -18,10 +19,11 @@
 }
 
 .avatar {
-  width: 40px;
-  height: 40px;
+  width: 52px;
+  height: 52px;
   border-radius: 50%;
   margin-right: 10px;
+  margin-bottom: -34px;
 }
 
 .header-center {
@@ -31,8 +33,9 @@
 
 .header-center h1 {
   margin: 0;
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: 700;
+  font-family: 'Poppins', sans-serif;
 }
 
 .header-right {
@@ -63,6 +66,7 @@
   transition: all 0.3s ease;
   border-bottom: 1px solid #ecf0f3d5;
   font-size: 0.9em;
+  margin-left: auto;
 }
 
 .search-bar input {
@@ -123,24 +127,27 @@
     font-size: 1em;
   }
 
+  .avatar {
+    width: 45px;
+    height: 45px;
+    margin-bottom: 0px;
+  }
+
   .date {
     font-size: 0.8em;
   }
 
   .search-bar {
-    width: 100%;
     margin-top: 10px;
+    width: 190px;
+    transition: all 0.3s ease;
+    font-size: 0.7em;
   }
 }
 
 @media (max-width: 400px) {
   .header {
     padding: 8px 15px;
-  }
-
-  .avatar {
-    width: 30px;
-    height: 30px;
   }
 
   .header-center h1 {
@@ -155,16 +162,4 @@
     font-size: 0.7em;
   }
 
-  .search-bar {
-    display: flex;
-    align-items: center;
-    background-color: rgba(236, 240, 241, 0.1);
-    border-radius: 5px;
-    padding: 5px 15px;
-    margin-top: 10px;
-    width: 190px;
-    transition: all 0.3s ease;
-    font-size: 0.7em;
-
-  }
 }
