--- a/src/components/SystemCard/styles.css
+++ b/src/components/SystemCard/styles.css
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
+  cursor: pointer;
 }
 
 .system-card-index {
@@ -73,6 +74,7 @@
   padding-left: 15px;
   border-left: 1px solid #e0e0e0;
   margin-left: 15px;
+  cursor: default;
 }
 
 .icon-button {
@@ -82,6 +84,7 @@
   padding: 5px;
   margin: 5px 0;
   transition: color 0.2s;
+  cursor: pointer;
 }
 
 .icon-button svg {
