--- a/src/pages/SystemsDashboard/styles.css
+++ b/src/pages/SystemsDashboard/styles.css
@@ -11,32 +11,54 @@
   justify-content: center;
   align-items: flex-start;
   padding: 20px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
-.systems-list {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.systems-columns {
+  display: flex;
   gap: 26px;
+  flex: 1;
   width: 100%;
   max-width: 1366px;
 }
 
-@media (max-width: 1200px) {
-  .systems-list {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
+.systems-column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-@media (max-width: 900px) {
-  .systems-list {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+.column-title {
+  font-weight: 600;
+  text-align: center;
+  padding: 6px;
+  background-color: #fcfcfcdb;
+  border-radius: 8px;
+  font-family: 'Roboto';
+  color: #41566be3;
+  font-size: 0.96em;
+}
+
+
+
+@media (max-width: 1200px) {
+  .systems-columns {
+    flex-wrap: wrap;
+  }
+
+  .systems-column {
+    flex-basis: calc(50% - 13px);
   }
 }
 
 @media (max-width: 600px) {
-  .systems-list {
-    grid-template-columns: 1fr;
+  .systems-columns {
+    flex-direction: column;
+  }
+
+  .systems-column {
+    flex-basis: 100%;
   }
 
   .systems-container {
