--- a/src/components/ModalAddSystem/styles.css
+++ b/src/components/ModalAddSystem/styles.css
@@ -38,20 +38,20 @@
   margin-bottom: 40px;
   font-family: 'Roboto', sans-serif;
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.8em;
   font-weight: 300;
 }
 
 .form-group {
   position: relative;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2.5em;
   /* Aumentado o espaçamento entre os inputs */
 }
 
 .form-group input {
   width: 100%;
-  padding: 0.7rem 0;
-  font-size: 1rem;
+  padding: 0.7em 0;
+  font-size: 1em;
   color: #ecf0f1;
   background-color: transparent;
   border: none;
@@ -66,7 +66,7 @@
 
 .form-group label {
   position: absolute;
-  top: 0.7rem;
+  top: 0.7em;
   left: 0;
   font-size: 1em;
   color: #bdc3c7;
@@ -76,9 +76,9 @@
 
 .form-group input:focus~label,
 .form-group input:not(:placeholder-shown)~label {
-  top: -1.5rem;
+  top: -1.5em;
   /* evitar sobreposição */
-  font-size: 0.8rem;
+  font-size: 0.8em;
   color: #3498db;
 }
 
@@ -89,12 +89,12 @@
 .button-group {
   display: flex;
   justify-content: space-between;
-  margin-top: 2rem;
+  margin-top: 2em;
 }
 
 .submit-btn,
 .cancel-btn {
-  padding: 0.7rem 1.5rem;
+  padding: 0.7em 1.5em;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -134,19 +134,19 @@
   }
 
   .modal-content h2 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
     margin-bottom: 30px;
   }
 
   .form-group input,
   .form-group label {
-    font-size: 0.9rem;
+    font-size: 0.9em;
   }
 
   .submit-btn,
   .cancel-btn {
-    padding: 0.6rem 1.2rem;
-    font-size: 0.9rem;
+    padding: 0.6em 1.2em;
+    font-size: 0.9em;
   }
 }
 
@@ -156,18 +156,18 @@
   }
 
   .modal-content h2 {
-    font-size: 1.3rem;
+    font-size: 1.3em;
     margin-bottom: 25px;
   }
 
   .form-group input,
   .form-group label {
-    font-size: 0.8rem;
+    font-size: 0.8em;
   }
 
   .submit-btn,
   .cancel-btn {
-    padding: 0.5rem 1rem;
-    font-size: 0.8rem;
+    padding: 0.5em 1em;
+    font-size: 0.8em;
   }
 }
