--- a/src/components/ModalAddSystem/styles.css
+++ b/src/components/ModalAddSystem/styles.css
@@ -35,17 +35,36 @@
 
 .modal-content h2 {
   color: #ecf0f1;
-  margin-bottom: 40px;
+  margin-bottom: 32px;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 1.8em;
   font-weight: 300;
 }
 
+.dropdown {
+  margin-bottom: 32px;
+}
+
+.dropdown-select {
+  width: 60%;
+  padding: 0.5em;
+  font-size: 1em;
+  color: #ecf0f1;
+  background-color: #2c3e50;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.dropdown-select:hover,
+.dropdown-select:focus {
+  background-color: #34495e;
+}
+
 .form-group {
   position: relative;
   margin-bottom: 2.5em;
-  /* Aumentado o espaçamento entre os inputs */
 }
 
 .form-group input {
@@ -77,7 +96,6 @@
 .form-group input:focus~label,
 .form-group input:not(:placeholder-shown)~label {
   top: -1.5em;
-  /* evitar sobreposição */
   font-size: 0.8em;
   color: #3498db;
 }
@@ -135,9 +153,10 @@
 
   .modal-content h2 {
     font-size: 1.5em;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
   }
 
+  .dropdown-select,
   .form-group input,
   .form-group label {
     font-size: 0.9em;
@@ -157,9 +176,10 @@
 
   .modal-content h2 {
     font-size: 1.3em;
-    margin-bottom: 25px;
+    margin-bottom: 12px;
   }
 
+  .dropdown-select,
   .form-group input,
   .form-group label {
     font-size: 0.8em;
