--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -1,3 +1,4 @@
+/* Estilo geral da sidebar */
 .sidebar {
   width: 60px;
   height: 100vh;
@@ -17,7 +18,7 @@
   color: #65788b;
   margin: 30px 0;
   cursor: pointer;
-  transition: color 0.3s ease;
+  position: relative;
 }
 
 .icon svg {
@@ -28,12 +29,43 @@
   stroke: #ffffff;
 }
 
-@media (max-width: 1000px) {
-  .sidebar {
-    transform: translateX(-100%);
-  }
+.icon[data-tooltip]:hover::before {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 100%;
+  left: 80px;
+  transform: translateX(-50%);
+  background-color: #33333395;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 4px;
+  white-space: nowrap;
+  font-size: 12px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  opacity: 1;
+  font-family: 'Roboto', sans-serif;
+}
 
-  .sidebar.open {
-    transform: translateX(0);
-  }
+.icon[data-tooltip]:hover::after {
+  content: '';
+  position: absolute;
+  bottom: 90%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 6px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent;
+  opacity: 1;
+}
+
+.icon::before,
+.icon::after {
+  opacity: 0;
+}
+
+.icon:hover::before,
+.icon:hover::after {
+  opacity: 1;
 }
