--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -1,4 +1,3 @@
-/* Estilo geral da sidebar */
 .sidebar {
   width: 60px;
   height: 100vh;
@@ -41,31 +40,23 @@
   border-radius: 4px;
   white-space: nowrap;
   font-size: 12px;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
-  opacity: 1;
   font-family: 'Roboto', sans-serif;
 }
 
 .icon[data-tooltip]:hover::after {
-  content: '';
   position: absolute;
   bottom: 90%;
   left: 50%;
-  transform: translateX(-50%);
-  border-width: 6px;
-  border-style: solid;
   border-color: #333 transparent transparent transparent;
-  opacity: 1;
 }
 
-.icon::before,
-.icon::after {
-  opacity: 0;
-}
 
-.icon:hover::before,
-.icon:hover::after {
-  opacity: 1;
+@media (max-width: 1000px) {
+  .sidebar {
+    transform: translateX(-100%);
+  }
+
+  .sidebar.open {
+    transform: translateX(0);
+  }
 }
