--- a/src/pages/SystemsDashboard/styles.css
+++ b/src/pages/SystemsDashboard/styles.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  font-size: 16px;
+  /* Tamanho de font pai padrão para os demais componentes filhos */
 }
 
 .main-content {
