--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -112,7 +112,7 @@
   margin-bottom: -30px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .header {
     padding: 10px 20px;
   }
@@ -129,6 +129,10 @@
 
   .header-center h1 {
     font-size: 1.3em;
+  }
+
+  .header-left {
+    margin-left: 60px;
   }
 
 
@@ -157,7 +161,11 @@
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
+  .header-left {
+    margin-left: 0px;
+  }
+
   .header {
     padding: 8px 15px;
   }
@@ -165,6 +173,8 @@
   .header-center h1 {
     font-size: 1.1em;
   }
+
+
 
   .time {
     font-size: 0.9em;
