--- a/src/components/ResponsiveSidebar/styles.css
+++ b/src/components/ResponsiveSidebar/styles.css
@@ -1,18 +1,79 @@
+.responsive-sidebar {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+}
+
 .hamburger-menu {
-  width: 30px;
-  height: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-  cursor: pointer;
-  background-color: #2c3e50;
-  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+  background-color: #33333395;
+  border-radius: 5px;
   padding: 5px;
+  cursor: pointer;
 }
 
 .bar {
-  width: 20px;
-  height: 2px;
-  background-color: #ecf0f1;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+.menu-items {
+  position: absolute;
+  top: 40px;
+  right: 10;
+  background-color: #33333395;
+  border-radius: 5px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.3s ease-in-out;
+  transform: scaleY(0);
+  transform-origin: top;
+}
+
+.responsive-sidebar.open .menu-items {
+  transform: scaleY(1);
+}
+
+.respnsive-icon {
+  color: #65788b;
+  margin: 10px 0;
+  cursor: pointer;
+  position: relative;
+}
+
+.respnsive-icon svg {
+  transition: stroke 0.3s ease, fill 0.3s ease;
+}
+
+.respnsive-icon:hover svg {
+  stroke: #ffffff;
+}
+
+.respnsive-icon[data-tooltip]:hover::before {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 100%;
+  left: 200%;
+  transform: translateX(-50%);
+  background-color: #33333395;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 4px;
+  white-space: nowrap;
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+}
+
+@media (min-width: 601px) {
+  .responsive-sidebar {
+    display: none;
+  }
 }
