--- a/src/pages/SystemsDashboard/styles.css
+++ b/src/pages/SystemsDashboard/styles.css
@@ -52,7 +52,7 @@
 
 @media (max-width: 1000px) {
   .main-content {
-    padding-left: 0;
+    padding-left: 60;
   }
 
   .systems-container {
@@ -70,12 +70,18 @@
     flex-wrap: wrap;
   }
 
+
+
   .systems-column {
     flex-basis: calc(50% - 13px);
   }
 }
 
 @media (max-width: 600px) {
+  .main-content {
+    padding-left: 0;
+  }
+
   .systems-columns {
     flex-direction: column;
   }
