--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -3,15 +3,19 @@
   color: #ecf0f1;
   font-family: 'Roboto', sans-serif;
   padding: 10px 60px;
-  position: relative;
-
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  border-bottom: 2px solid #1e262d;
 }
 
 .header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  padding: 0 60px;
 }
 
 .header-left {
@@ -19,7 +23,6 @@
   flex-direction: column;
   align-items: center;
   margin-top: 6px;
-  margin-left: 60px;
 }
 
 .avatar {
@@ -31,7 +34,6 @@
 .header-center {
   flex-grow: 1;
   text-align: center;
-  margin-left: 60px;
   margin-top: 14px;
 }
 
@@ -46,7 +48,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-right: 30px;
+  margin-right: 90px;
 }
 
 .time {
@@ -72,6 +74,7 @@
   font-size: 0.9em;
   margin-left: auto;
   margin-top: 4px;
+  margin-right: 140px;
 }
 
 .search-bar input {
@@ -113,9 +116,6 @@
 }
 
 @media (max-width: 800px) {
-  .header {
-    padding: 10px 20px;
-  }
 
   .header-content {
     flex-wrap: wrap;
@@ -129,12 +129,8 @@
 
   .header-center h1 {
     font-size: 1.3em;
+    margin-right: 90px;
   }
-
-  .header-left {
-    margin-left: 60px;
-  }
-
 
   .header-right {
     flex: 1;
@@ -145,8 +141,8 @@
   }
 
   .avatar {
-    width: 45px;
-    height: 45px;
+    width: 55px;
+    height: 55px;
   }
 
   .date {
@@ -166,15 +162,26 @@
     margin-left: 0px;
   }
 
+  .search-bar {
+    margin-right: 30px;
+  }
+
+  .header-right {
+    margin-right: 30px;
+  }
+
   .header {
     padding: 8px 15px;
   }
 
-  .header-center h1 {
-    font-size: 1.1em;
+  .header-content {
+    padding: 0 15px;
   }
 
-
+  .header-center h1 {
+    font-size: 1.1em;
+    margin-right: 0px;
+  }
 
   .time {
     font-size: 0.9em;
@@ -183,5 +190,4 @@
   .date {
     font-size: 0.7em;
   }
-
 }
