--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -33,10 +33,11 @@
   .footer {
     font-size: 0.8em;
     padding: 8px 0;
+    justify-content: center;
   }
 
   .footer-item {
-    margin-right: 10px;
+    margin-right: 20px;
   }
 
   .circle {
