--- a/src/components/ResponsiveSidebar/styles.css
+++ b/src/components/ResponsiveSidebar/styles.css
@@ -1,7 +1,7 @@
 .responsive-sidebar {
   position: fixed;
-  top: 20px;
-  left: 40px;
+  top: 180px;
+  left: 20px;
   z-index: 1000;
 }
 
@@ -15,6 +15,7 @@
   border-radius: 5px;
   padding: 5px;
   cursor: pointer;
+  border-radius: 8px;
 }
 
 .bar {
