--- a/src/components/ResponsiveSidebar/styles.css
+++ b/src/components/ResponsiveSidebar/styles.css
@@ -1,68 +1,35 @@
 .responsive-sidebar {
-  position: fixed;
-  top: 180px;
-  left: 20px;
-  z-index: 1000;
-}
-
-.hamburger-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 22px;
-  height: 22px;
-  background-color: #33333395;
-  border-radius: 5px;
-  padding: 5px;
-  cursor: pointer;
-  border-radius: 8px;
-}
-
-.bar {
+  display: none;
   width: 100%;
-  height: 3px;
-  background-color: #fff;
-  border-radius: 2px;
-}
-
-.responsive-sidebar.open .menu-items {
-  transform: scaleY(1);
-}
-
-.menu-items {
-  position: absolute;
-  top: 40px;
-  right: 10;
-  background-color: #33333395;
-  border-radius: 5px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  transition: transform 0.3s ease-in-out;
-
+  height: 18px;
+  background-color: #1e262d;
+  position: fixed;
+  top: 166px;
+  z-index: 2;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 4px 0px;
 }
 
 .responsive-icon {
-  color: #ffffff;
+  color: #65788b;
   cursor: pointer;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  position: relative;
 }
 
 .responsive-icon svg {
   transition: stroke 0.3s ease, fill 0.3s ease;
 }
 
-.responsive-icon:hover svg {
+.responsive-icon :hover svg {
   stroke: #ffffff;
 }
 
 .responsive-icon[data-tooltip]:hover::before {
   content: attr(data-tooltip);
   position: absolute;
-  bottom: 10%;
-  left: 440%;
+  top: 100%;
+  left: 50%;
   transform: translateX(-50%);
   background-color: #33333395;
   color: #fff;
@@ -71,10 +38,11 @@
   white-space: nowrap;
   font-size: 12px;
   font-family: 'Roboto', sans-serif;
+
 }
 
-@media (min-width: 601px) {
+@media (max-width: 600px) {
   .responsive-sidebar {
-    display: none;
+    display: flex;
   }
 }
