--- a/src/components/SystemCard/styles.css
+++ b/src/components/SystemCard/styles.css
@@ -62,6 +62,7 @@
   white-space: pre-wrap;
   word-wrap: break-word;
   max-width: 100%;
+
 }
 
 .system-card-details {
@@ -149,4 +150,38 @@
     width: 16px;
     height: 16px;
   }
+}
+
+.system-card-input {
+  border: 2px solid #b0c4de;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-size: 0.9em;
+  color: #2c3e50;
+  width: 80%;
+  transition: border-color 0.2s, box-shadow 0.2s;
+}
+
+.system-card-input:focus {
+  border-color: var(--card-color);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  outline: none;
+  font-family: 'Roboto', sans-serif;
+}
+
+.confirm-button {
+  background-color: #b0c4de;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 0.9em;
+  transition: background-color 0.2s;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 6px;
+}
+
+.confirm-button:hover {
+  background-color: var(--card-color);
 }
