--- a/src/components/SystemCard/styles.css
+++ b/src/components/SystemCard/styles.css
@@ -170,7 +170,7 @@
 }
 
 .confirm-button {
-  background-color: #b0c4de;
+  background-color: #65788b;
   color: #fff;
   border: none;
   border-radius: 4px;
